                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 03-07-2006 fixed: [ 1515857 ] Default bookmark and back problem.
 - 02-07-2006 fixed: PyMappingMethods were not included for Pythons playlist.  __getitem__, __len__ & __setitem__
                     It is subscriptable, Use PlayList[int] to retrieve a playlistItem.
 - 02-07-2006 fixed: navigation could get stuck in media windows if a server disappeared. also, this incidentially adds upnp support! thx a bunch to c0diq, see http://www.plutinosoft.com/blog/category/blahblah/120 
 - 02-07-2006 added: shadowColor to the ControlButton in Python.
                     - If you want a label with a shadow, use the button without textures :)
 - 02-07-2006 fixed: subtitles where centered according to overscan corrections
 - 02-07-2006 fixed: filenames with an @ signed in them in the root of dvd/cd's would refuse to play
 - 01-07-2006 added: two new python functions:
                     xbmc.playSFX(filename) -- Plays a wav file by filename
                     xbmc.enableNavSounds(yesNo) -- Enables/Disables (True/False) nav sounds
 - 30-06-2006 changed: a toast message is displayed if last.fm username/password is wrong
 - 30-06-2006 added: visible condition Weather.IsFetched, is true if the weather data is downloaded
 - 30-06-2006 fixed: smb shares with special chars (spaces, %..) in them would fail to use correct authentication information when opening files.
 - 29-06-2006 fixed: While scanning, tag reading and remote thumb lookup was enabled in My Music Files.
 - 29-06-2006 fixed: shortcuts in my programs misbehaved slightly.
 - 28-06-2006 fixed: XLink Kai crash on load.